data/derived/comb/progs/unify/prog4648.ml.out
Characters 142-146:
  let seen' = if (List.mem h seen)=false then h@[seen] in
                                                 ^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list list
